[package]
name = "okaerirustbot"
version = "0.1.3"
license = "MIT"
description = "My personal telegram bot in rust"
homepage = "https://github.com/Wahyu213/okaerirustbot"
authors = ["Wahyu213 <wahyusaputraramdani587@gmail.com>"]
edition = "2021"

[dependencies]
teloxide = { version = "0.5.0", features = ["auto-send", "macros"] }
log = "0.4.8"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.15", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.7", features = ["json"] }
serde_json = "1.0.75"
spamprotection = "0.1.0-2"
